// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggablePivotTable > getExtendedReferencePoint > given an empty reference point > should return a new reference point with pivotTable UI config 1`] = `
{
  "buckets": {
    "attribute": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
    },
    "measures": {
      "accepts": [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": false,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": {
    "supported": true,
  },
  "openAsReport": {
    "supported": false,
  },
  "recommendations": {},
  "supportedOverTimeComparisonTypes": [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable > getExtendedReferencePoint > given multipleMetricsAndCategoriesReferencePoint > should return a new reference point with pivotTable UI config 1`] = `
{
  "buckets": {
    "attribute": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
    },
    "measures": {
      "accepts": [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": false,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": {
    "supported": true,
  },
  "openAsReport": {
    "supported": false,
  },
  "recommendations": {},
  "supportedOverTimeComparisonTypes": [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable > getExtendedReferencePoint > given simpleStackedReferencePoint > should return a new reference point with pivotTable UI config 1`] = `
{
  "buckets": {
    "attribute": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
    },
    "measures": {
      "accepts": [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": true,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": {
    "supported": true,
  },
  "openAsReport": {
    "supported": false,
  },
  "recommendations": {},
  "supportedOverTimeComparisonTypes": [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable > getExtendedReferencePoint > should return a new reference point with ui config supporting mulple date dimensions when turned on 1`] = `
{
  "buckets": {
    "attribute": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 20,
      },
      "title": "Rows",
    },
    "columns": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 20,
      },
      "title": "Columns",
    },
    "filters": {
      "accepts": [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": {
        "date": 1,
      },
    },
    "measures": {
      "accepts": [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": true,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": {
    "supported": true,
  },
  "openAsReport": {
    "supported": false,
  },
  "recommendations": {},
  "supportedOverTimeComparisonTypes": [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`createPivotTableConfig > should create valid config with auto-resize if feature flag on 1`] = `
{
  "columnSizing": {
    "defaultWidth": "autoresizeAll",
  },
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with growToFit if feature flag on and environment !== dashboards 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with growToFit if feature flag on and environment === analyticalDesigner 1`] = `
{
  "columnSizing": {
    "growToFit": false,
  },
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with growToFit if feature flag on and environment === dashboards 1`] = `
{
  "columnSizing": {
    "growToFit": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with manualResizing if feature flag off and configs are provided 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with manualResizing if feature flag on and configs are empty 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with manualResizing if feature flag on and configs are not defined 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with manualResizing if feature flag on and configs are provided 1`] = `
{
  "columnSizing": {
    "columnWidths": [
      {
        "attributeColumnWidthItem": {
          "attributeIdentifier": "294512a6b2ed4be8bd3948dd14db1950",
          "width": {
            "value": 740,
          },
        },
      },
    ],
  },
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with menus for non-dashboard env 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with menus for undefined env 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with separators 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": {
    "decimal": ".",
    "thousand": "-",
  },
}
`;

exports[`createPivotTableConfig > should create valid config with total rows if feature flag off 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config with total rows if feature flag on 1`] = `
{
  "columnSizing": {},
  "menu": {
    "aggregations": true,
    "aggregationsSubMenu": true,
    "aggregationsSubMenuForRows": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig > should create valid config without menus for dashboard env 1`] = `
{
  "columnSizing": {},
  "separators": undefined,
}
`;
